--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  z-index: 10;
 }
 .menu-icon {
   margin-top: 3rem;
@@ -35,7 +36,7 @@ body {
 .line-1,
 .line-3 {
   width: 1.8rem;
-  transition: width 0.3s;
+  transition: all 0.4s;
 }
 .menu-icon:hover .line {
   width: 2.5rem;
@@ -65,8 +66,8 @@ body {
 /* End of sidebar */
 /* Navigation */
 .navigation {
-  margin-left: 8rem;
   position: fixed;
+  left: -32rem;
   width: 40rem;
   height: 100%;
   background: linear-gradient(
@@ -80,6 +81,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  transition: left 0.8s cubic-bezier(1, 0, 0, 1);
 }
 .navigation-heading {
   font-family: "josefin Sans", sans-serif;
@@ -168,6 +170,25 @@ body {
 .navigation-link:hover::before,
 .navigation-link:hover::after {
   width: 3rem;
+}
+.copyright {
+  color: #fff;
+  font-size: 1.2rem;
+  margin-bottom: 1.5rem;
+}
+.checkbox:checked ~ .navigation {
+  left: 8rem;
+}
+.checkbox:checked ~ .sidebar .line-1 {
+  transform: rotate(-405deg) translate(-5px, 6px);
+  width: 2.5rem;
+}
+.checkbox:checked ~ .sidebar .line-2 {
+  opacity: 0;
+}
+.checkbox:checked ~ .sidebar .line-3 {
+  transform: rotate(405deg) translate(-5px, -6px);
+  width: 2.5rem;
 }
 /* End of navigation */
 /* End of navbar */
